--- a/frontend/src/components/budgets.css
+++ b/frontend/src/components/budgets.css
@@ -1,27 +1,42 @@
-.budget-table {
- margin-right: 10%;
+.budgets_goals_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
 }
 
-.budgets-container {
+.select-container {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.budget-table, .goal-table {
+    width: 80%;
+    margin-left: 45%;
+}
+
+.budgets-container, .goals-container{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.budget-form-grid {
+.budget-form-grid, .goal-form-grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-top: 10px;
 }
 
-.budget-form-container {
-    margin-left: 10%;
+.budget-form-container, .goal-form-container {
+    margin-left: 15%;
 }
 
 .input-container {
     grid-column: span 1;
+    min-width: 155px;
 }
 
 .input-container input {
@@ -41,7 +56,7 @@
 .category-div {
     border-radius: 5px;
     padding: 5px;
-    width: 150px;
+    width: 100%;
     text-align: center;
     font-weight: 500;
     color: white;
@@ -54,4 +69,49 @@
 
 .category-icon {
     margin-right: 10px;
+}
+
+table {
+    /* width: 100%; */
+    width: 800px;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+}
+
+#progress {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-right: 10px;
+    height: 100px;
+}
+
+#progress .progress-bar-container {
+    width: 150px;
+}
+
+th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.forms-tables-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.forms-container {
+    width: 48%;
+    margin-right: 2%;
+}
+
+.tables-container {
+    width: 48%;
+    margin-left: 2%;
 }
