--- a/frontend/src/components/avatarOverview/avatarOverview.css
+++ b/frontend/src/components/avatarOverview/avatarOverview.css
@@ -1,39 +1,39 @@
 .container {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start; /* Align items at the top */
     padding: 20px;
 }
 
 .avatar-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%; /* Add right margin to separate from items-container */
 }
 
 .items-container {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 800px;
+    flex-direction: column;
+    width: 50%; /* Adjust the width as necessary */
+    margin-right: 5%;
 }
 
 .item-section {
-    width: 48%;
+    margin-bottom: 20px;
 }
 
 h2 {
     text-align: center;
     margin-bottom: 10px;
     font-size: 24px;
+    border-bottom: 1px solid black;
 }
 
 .item-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     gap: 10px;
 }
 
@@ -72,7 +72,6 @@ h2 {
 .item.neck img {
     left: 58%;
 }
-
 
 .item-details {
     margin-top: 60px; /* Add margin to account for the image */
