--- a/frontend/src/components/goals_budgets/budgets.css
+++ b/frontend/src/components/goals_budgets/budgets.css
@@ -7,7 +7,7 @@
 
 .select-container {
     width: 100%;
-    max-width: 300px;
+    /*max-width: 300px;*/
     margin-bottom: 20px;
 }
 
@@ -77,7 +77,7 @@ table {
     border-collapse: collapse;
 }
 
-th, td {
+.budget-table th, td {
     padding: 12px;
     border-bottom: 1px solid #ddd;
     text-align: left;
