--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -1,6 +1,6 @@
-.container {
-    margin-top: 20px;
+.dash-container {
     display: flex;
     flex-direction: row;
-    align-items: center; 
+    align-items: center;
+    margin: 20px;
 }
