--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -1,4 +1,3 @@
-/* Header container */
 header {
     background-color: #D2F2BB; /* Background color */
     color: black; /* Text color */
@@ -6,9 +5,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
-/* Navigation links */
 nav ul {
     list-style-type: none; /* Remove bullet points */
     margin: 0;
