--- a/frontend/src/components/avatarOverview/avatarOverview.css
+++ b/frontend/src/components/avatarOverview/avatarOverview.css
@@ -27,7 +27,7 @@ h2 {
     text-align: center;
     margin-bottom: 10px;
     font-size: 24px;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
 }
 
 /* .item-list {
