--- a/frontend/src/styles/app.less
+++ b/frontend/src/styles/app.less
@@ -22,6 +22,10 @@ h2 {
     align-items: center;
 }
 
+.m-0-auto {
+    margin: 0 auto;
+}
+
 @media screen and (max-width: 700px){
     .row_container {
         display: flex;
