--- a/frontend/src/styles/variables.less
+++ b/frontend/src/styles/variables.less
@@ -4,3 +4,5 @@
 @submit-color: #245501;
 @submit-color-hover: #26692A;
 @card-light-green: #E9F9DC;
+@light-green-hoverable: #3BA542;
+@light-green-hoverable-hover: #69C96F;
